root/apps/services/indexer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: indexer, namespace: platform }
spec:
  replicas: 1
  selector: { matchLabels: { app: indexer } }
  template:
    metadata: { labels: { app: indexer } }
    spec:
      containers:
        - name: indexer
          image: ghcr.io/fueledbycoffee/qoffice-indexer:preprod-latest
          ports: [ { containerPort: 8080 } ]
